<resources>
    <string name="app_name">UniServicesOnline</string>
    <string name="logo_text">UniServices</string>
    <string name="txt_networCHK">No se ha podido conectar internet, algunas fuciones no estaran disponibles. Asegúrese de tener una conexion activa.</string>
    <string name="imgnchk">IMGNCHK</string>
    <string name="init_precio">Desde: C$</string>
    <string name="demo_SrvDesc">Aqui va una descripccion del servicio</string>
    <string name="demo_serv_precio">Desde: C$1500</string>
    <string name="demo_srv_nombre">Nombre del Servicio</string>
    <string name="img_header">header</string>
    <string name="hint_mail">e-mail</string>
    <string name="hint_pass">***********</string>
    <string name="txt_btnLogin">Iniciar Sesion</string>
    <string name="txt_registrate_aqui">Aún no estas registraado? - Registrate AQUI!</string>
    <string name="txt_copyR">Todos los derechos reservados 2017</string>
    <string name="txt_btnLogin_local">Usar sin conexion</string>
    <string name="demo_cat_nombre">Nombre Categoria</string>
</resources>
