<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uni.innovadores.uniservicesonline.LoginActivity">

    <RelativeLayout
        android:id="@+id/network_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ContLogo"
        android:alpha="0.8"
        android:background="@color/netwokBg">

        <ImageView
            android:id="@+id/img_netwk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:alpha="0.6"
            android:contentDescription="@string/imgnchk"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            app:srcCompat="@drawable/nchk"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/img_netwk"
            android:text="@string/txt_networCHK"
            android:textSize="12sp"
            android:textStyle="normal|italic"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ContLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/fheadpapp"
            android:contentDescription="@string/img_header"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/network_check"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/login_box"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="22dp">

        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"/>

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"/>
    </LinearLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/txt_btnLogin"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/btn_login_local"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/txt_btnLogin_local"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/txt_registrate_aqui"/>

    </android.support.percent.PercentRelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/txt_copyR"
        android:textColor="#ffffff"/>

</RelativeLayout>
