<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_serv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/services"
            android:contentDescription="@string/logo_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_name_serv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_margin="5dp"
        android:text="@string/demo_srv_nombre"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_descr_serv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_name_serv"
        android:layout_below="@+id/tv_name_serv"
        android:layout_marginTop="0dp"
        android:text="@string/demo_SrvDesc"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_descr_serv"
        android:layout_below="@+id/tv_descr_serv"
        android:layout_marginTop="5dp"
        android:text="@string/demo_serv_precio"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <RatingBar
        android:id="@+id/rtb_punt"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_precio"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/tv_precio"
        android:rating="3.5"/>

</RelativeLayout>