<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_cat"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo_text"
            android:padding="10dp"
            app:srcCompat="@drawable/cat"/>

        <TextView
            android:id="@+id/tv_name_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/img_cat"
            android:text="@string/demo_cat_nombre"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_descr_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_name_cat"
            android:layout_below="@+id/tv_name_cat"
            android:layout_marginTop="15dp"
            android:text="@string/demo_SrvDesc"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tx_cat_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_descr_cat"
            android:layout_below="@+id/tv_descr_cat"
            android:text="TextView"
            android:visibility="gone"/>
    </RelativeLayout>

</RelativeLayout>