<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="uni.innovadores.uniservicesonline.CategoriasActivity">

    <RelativeLayout
        android:id="@+id/network_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvSeparador"
        android:alpha="0.8"
        android:background="@color/netwokBg">

        <ImageView
            android:id="@+id/img_netwk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:alpha="0.6"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            app:srcCompat="@drawable/nchk"
            android:contentDescription="@string/imgnchk"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/img_netwk"
            android:text="@string/txt_networCHK"
            android:textSize="12sp"
            android:textStyle="normal|italic"/>
    </RelativeLayout>

    <pl.droidsonroids.gif.GifTextView
        android:id="@+id/Gloader"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:background="@drawable/loader"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo_text"
            app:srcCompat="@drawable/logouniservicios"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lay_menu"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"/>

    <TextView
        android:id="@+id/tvSeparador"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/network_check"
        android:gravity="center_vertical|center_horizontal"
        android:text="SELECCIONE UNA CATEGORIA"
        android:textStyle="bold"/>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/lay_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/categoria">

        <Button
            android:id="@+id/btn_home"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:alpha="0"
            app:layout_widthPercent="20%"/>

        <Button
            android:id="@+id/btn_cat"
            android:layout_height="60dp"
            android:layout_alignTop="@+id/btn_home"
            android:layout_toEndOf="@+id/btn_home"
            android:alpha="0"
            android:text="Button"
            app:layout_widthPercent="22%"/>

        <Button
            android:id="@+id/btn_notif"
            android:layout_height="60dp"
            android:layout_alignTop="@+id/btn_cat"
            android:layout_toEndOf="@+id/btn_cat"
            android:alpha="0"
            android:text="Button"
            app:layout_widthPercent="18%"/>

        <Button
            android:id="@+id/btn_favo"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/btn_notif"
            android:layout_toEndOf="@+id/btn_notif"
            android:alpha="0"
            android:text="Button"
            app:layout_widthPercent="19%"/>

        <Button
            android:id="@+id/btn_perfil"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_favo"
            android:alpha="0"
            android:text="Button"
            app:layout_widthPercent="20%"/>
    </android.support.percent.PercentRelativeLayout>
</RelativeLayout>
