<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uni.innovadores.uniservicesonline.ContactarActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/network_check"
        android:gravity="center_vertical|center_horizontal"
        android:text="CONTACTARSE CON EL PROVEEDOR "
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvSeparador2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo_text"
            app:srcCompat="@drawable/logouniservicios"/>

    </LinearLayout>

    <pl.droidsonroids.gif.GifTextView
        android:id="@+id/gloader"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:background="@drawable/loader"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/network_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvSeparador2"
        android:alpha="0.8"
        android:background="@color/netwokBg">

        <ImageView
            android:id="@+id/img_netwk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:alpha="0.6"
            android:contentDescription="@string/imgnchk"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            app:srcCompat="@drawable/nchk"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/img_netwk"
            android:text="@string/txt_networCHK"
            android:textSize="12sp"
            android:textStyle="normal|italic"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3">

        <TextView
            android:id="@+id/tx_servicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:text="Nombre del servicio seleccionado"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tx_servicio"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:text="Hola, estoy inerezado en sus servicios para..."
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="SMS"
            android:textColor="@android:color/background_light"/>

        <Button
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_sms"
            android:layout_alignBottom="@+id/btn_sms"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:text="Llamar"
            android:textColor="@android:color/background_light"/>

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_call"
            android:layout_alignBottom="@+id/btn_call"
            android:layout_alignEnd="@+id/editText2"
            android:background="@color/colorAccent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="Contact via..."
            android:textColor="@android:color/background_light"/>
    </RelativeLayout>

</RelativeLayout>
